Archive2/83/f87f09a4a1ef1a/output
main.cpp: In function ‘int main()’:
main.cpp:5:17: error: missing template arguments before ‘x’
     std::vector x;
                 ^
main.cpp:5:17: error: expected ‘;’ before ‘x’
